JPackage Gradle Plugin 1.2.0
* Single 'modulePath' removed
* File and directory based parameters resolution